docs: add ecosystem release info

--- a/src/pages/whats-happening/changelog-and-roadmap/index.mdx
+++ b/src/pages/whats-happening/changelog-and-roadmap/index.mdx
@@ -5,6 +5,17 @@ description:
   for Carbon’s future.
 ---
 
+import {
+  StructuredListWrapper,
+  StructuredListHead,
+  StructuredListRow,
+  StructuredListCell,
+  StructuredListBody,
+  UnorderedList,
+  Link,
+  ListItem,
+} from 'carbon-components-react';
+
 <PageDescription>
 
 Read about the latest updates and learn more about what the team has planned for
@@ -33,25 +44,129 @@ Carbon’s future.
 </Column>
 </Row>
 
-## Carbon team
+## Releases
 
-<Row className="resource-card-group">
-<Column colMd={4} colLg={4} noGutterSm>
-  <ResourceCard
-    subTitle="Team 2020 Q4 OKRs"
-    href="https://app.zenhub.com/workspaces/okrs-5eef636e504e9d001694ba22/roadmap">
+Each Carbon Design System release includes the releases of the libraries that
+are primarily maintained by the Carbon team. Those libraries are independently
+versioned following the industry-standard
+[semantic versioning](https://semver.org) specification.
 
-![ZenHub icon](images/z-icon.svg)
+Where the Carbon team strives for frictionless major version updates through
+release documentation, migration tooling, etc., Carbon 10 was a unique release
+as it was the first to implement the updated IBM Design Language.
 
-  </ResourceCard>
-</Column>
-<Column colMd={4} colLg={4} noGutterSm>
-  <ResourceCard
-    subTitle="Squad 2020 Q4 OKRs"
-    href="https://app.zenhub.com/workspaces/okrs-5eef636e504e9d001694ba22/board?labels=squad%3A%20system&milestones=2020Q4%232020-12-31&useDefaultFilterLogic=false&repos=273306655&showPRs=false&showEstimates=false&showReleases=false&showDependencies=false">
+Unlike Carbon 10, the upcoming Carbon 11 release will not require you to
+redesign your product as the IBM Design Language version has not changed since
+Carbon 10. Read more about the upcoming
+[Carbon 11 release](https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a).
 
-![ZenHub icon](images/z-icon.svg)
-
-  </ResourceCard>
-</Column>
-</Row>
+<StructuredListWrapper>
+  <StructuredListHead>
+    <StructuredListRow head>
+      <StructuredListCell head>Release</StructuredListCell>
+      <StructuredListCell head>GA Date</StructuredListCell>
+      <StructuredListCell head>IBM Design Language</StructuredListCell>
+      <StructuredListCell head>Carbon Elements</StructuredListCell>
+      <StructuredListCell head>Carbon Components</StructuredListCell>
+      <StructuredListCell head>Carbon React</StructuredListCell>
+    </StructuredListRow>
+  </StructuredListHead>
+  <StructuredListBody>
+    <StructuredListRow>
+      <StructuredListCell>✅ Carbon 11</StructuredListCell>
+      <StructuredListCell>2021 Q2</StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.ibm.com/design/language">v2</Link>
+      </StructuredListCell>
+      <StructuredListCell>Coming soon</StructuredListCell>
+      <StructuredListCell>Coming soon</StructuredListCell>
+      <StructuredListCell>Coming soon</StructuredListCell>
+    </StructuredListRow>
+    <StructuredListRow>
+      <StructuredListCell>✅ Carbon 10</StructuredListCell>
+      <StructuredListCell>03/29/19</StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.ibm.com/design/language">v2</Link>
+      </StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.npmjs.com/package/@carbon/elements/v/latest">
+          v10.x
+        </Link>
+      </StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.npmjs.com/package/carbon-components/v/latest">
+          v10.x
+        </Link>
+      </StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.npmjs.com/package/carbon-components-react/v/latest">
+          v7.x
+        </Link>
+      </StructuredListCell>
+    </StructuredListRow>
+    <StructuredListRow>
+      <StructuredListCell>⚠️ Carbon 9</StructuredListCell>
+      <StructuredListCell>06/04/18</StructuredListCell>
+      <StructuredListCell>v1</StructuredListCell>
+      <StructuredListCell>—</StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.npmjs.com/package/carbon-components/v/9.x">
+          v9.x
+        </Link>
+      </StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.npmjs.com/package/carbon-components-react/v/6.x">
+          v6.x
+        </Link>
+      </StructuredListCell>
+    </StructuredListRow>
+    <StructuredListRow>
+      <StructuredListCell>⚠️ Carbon 8</StructuredListCell>
+      <StructuredListCell>10/26/17</StructuredListCell>
+      <StructuredListCell>v1</StructuredListCell>
+      <StructuredListCell>—</StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.npmjs.com/package/carbon-components/v/8.23.1">
+          v8.23.1
+        </Link>
+      </StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.npmjs.com/package/carbon-components-react/v/5.x">
+          v5.x
+        </Link>
+      </StructuredListCell>
+    </StructuredListRow>
+    <StructuredListRow>
+      <StructuredListCell>⚠️ Carbon 7</StructuredListCell>
+      <StructuredListCell>03/30/17</StructuredListCell>
+      <StructuredListCell>v1</StructuredListCell>
+      <StructuredListCell>—</StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.npmjs.com/package/carbon-components/v/7.26.10">
+          v7.26.10
+        </Link>
+      </StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.npmjs.com/package/carbon-components-react/v/4.2.2">
+          v4.2.2
+        </Link>
+      </StructuredListCell>
+    </StructuredListRow>
+    <StructuredListRow>
+      <StructuredListCell>⚠️ Carbon 6</StructuredListCell>
+      <StructuredListCell>—</StructuredListCell>
+      <StructuredListCell>v1</StructuredListCell>
+      <StructuredListCell>—</StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.npmjs.com/package/carbon-components/v/6.20.1">
+          v6.20.1
+        </Link>
+      </StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.npmjs.com/package/carbon-components-react/v/3.14.0">
+          v3.14.0
+        </Link>
+      </StructuredListCell>
+    </StructuredListRow>
+  </StructuredListBody>
+</StructuredListWrapper>
