docs: add v11 cells

--- a/src/pages/whats-happening/changelog-and-roadmap/index.mdx
+++ b/src/pages/whats-happening/changelog-and-roadmap/index.mdx
@@ -78,9 +78,9 @@ Carbon 10. Read more about the upcoming
       <StructuredListCell>
         <Link href="https://www.ibm.com/design/language">v2</Link>
       </StructuredListCell>
-      <StructuredListCell>Coming soon</StructuredListCell>
-      <StructuredListCell>Coming soon</StructuredListCell>
-      <StructuredListCell>Coming soon</StructuredListCell>
+      <StructuredListCell>v11.x</StructuredListCell>
+      <StructuredListCell>v11.x</StructuredListCell>
+      <StructuredListCell>v8.x</StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
       <StructuredListCell>✅ Carbon 10</StructuredListCell>
