docs(web-components): added note on difference with framework wrappers

--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -166,6 +166,15 @@ turn, this also comes with the benefits of encapsulation within the Shadow DOM:
 - [Carbon Web Components with React](https://web-components.carbondesignsystem.com/react/index.html)
 - [Carbon Web Components with Vue](https://web-components.carbondesignsystem.com/vue/index.html)
 
+<InlineNotification>
+
+**Note:** The approaches above detail the usage of Carbon Web Components within
+popular JavaScript frameworks. The APIs are based on how the web components are
+used, and differ from its pure framework counterparts (Carbon React, Carbon
+Angular, Carbon Vue).
+
+</InlineNotification>
+
 ## Troubleshooting
 
 If you experience any issues while getting set up with Carbon Web Components,
