docs: rename to changelog-and-roadmap to releaeses

--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Changelog and roadmap
+title: Releases
 description:
   Read about the latest updates and learn more about what the team has planned
   for Carbon’s future.
@@ -11,9 +11,7 @@ import {
   StructuredListRow,
   StructuredListCell,
   StructuredListBody,
-  UnorderedList,
   Link,
-  ListItem,
 } from 'carbon-components-react';
 
 <PageDescription>
@@ -44,7 +42,7 @@ Carbon’s future.
 </Column>
 </Row>
 
-## Releases
+## Release schedule
 
 Each Carbon Design System release includes the releases of the libraries that
 are primarily maintained by the Carbon team. Those libraries are independently
