--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -44,14 +44,21 @@ Carbon’s future.
 
 ## Release schedule
 
-Each Carbon Design System release includes the releases of the libraries that
-are primarily maintained by the Carbon team. Those libraries are independently
-versioned following the industry-standard
+Each Carbon Design System release includes library releases that are
+independently versioned following the industry-standard
 [semantic versioning](https://semver.org) specification.
 
-Where the Carbon team strives for frictionless major version updates through
-release documentation, migration tooling, etc., Carbon 10 was a unique release
-as it was the first to implement the updated IBM Design Language.
+The Carbon team also ships minor releases every other week and when necessary,
+patch releases between minor versions to address bugs. Read more in Carbon's
+[release radar](https://github.com/carbon-design-system/carbon/wiki/Release-radar).
+
+### Carbon 10
+
+Carbon 10 was a unique release as it was the first to implement the updated IBM
+Design Language. That required product redesigns to a certain extent due to
+foundational differences between IBM Design Language versions.
+
+### Carbon 11
 
 Unlike Carbon 10, the upcoming Carbon 11 release will not require you to
 redesign your product as the IBM Design Language version has not changed since
