--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -91,7 +91,7 @@ import 'carbon-web-components/es/components/dropdown/dropdown.js';
 import 'carbon-web-components/es/components/dropdown/dropdown-item.js';
 ```
 
-Once you do that, you can use our components in the same manner as native HTML
+Once you've imported the component modules, you can use our components in the same manner as native HTML
 tags, for example:
 
 ```html
