feat(web-components): addition of web components to website (#2215)
* feat(web-components): addition of web components to website

This PR introduced documentation around the support of Carbon Web
Components. This is a community contributed library that is based on the
 Web Components custom elements and shadow dom spec, and is the new
 browser standard.

* docs(web-components): adding link to web components on the homepage

* fix(mdxicon): adding webcomponents as an icon

* Update src/pages/developing/frameworks/web-components.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/developing/frameworks/web-components.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/developing/frameworks/web-components.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/developing/frameworks/web-components.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/developing/frameworks/web-components.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/developing/frameworks/web-components.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/developing/frameworks/web-components.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* docs(web-components): added section for framework wrappers

* docs(web-components): fix to run-on sentence

* docs(web-components): another small sentence fix

* docs(web-components): modification to the Javascript framework description

* docs(web-components): change usage of `web components` to lowercase

* fix(config): reverting local config files

* docs(web-components): added note on difference with framework wrappers

* Update src/pages/developing/frameworks/web-components.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/developin

--- a/src/pages/developing/frameworks/angular.mdx
+++ b/src/pages/developing/frameworks/angular.mdx
@@ -2,8 +2,17 @@
 title: Frameworks
 description:
   The Carbon Design System is built React first. We also support core parts of
-  the system in vanilla JS, Angular, Vue, and Svelte.
-tabs: ['React', 'Vanilla', 'Angular', 'Vue', 'Svelte', 'Other frameworks']
+  the system in vanilla JS, Angular, Vue, Svelte, and web components.
+tabs:
+  [
+    'React',
+    'Vanilla',
+    'Angular',
+    'Vue',
+    'Svelte',
+    'Web Components',
+    'Other frameworks',
+  ]
 ---
 
 <PageDescription>
