--- a/src/pages/developing/frameworks/other-frameworks.mdx
+++ b/src/pages/developing/frameworks/other-frameworks.mdx
@@ -2,15 +2,25 @@
 title: Frameworks
 description:
   The Carbon Design System is built React first. We also support core parts of
-  the system in vanilla JS, Angular, Vue, and Svelte.
-tabs: ['React', 'Vanilla', 'Angular', 'Vue', 'Svelte', 'Other frameworks']
+  the system in vanilla JS, Angular, Vue, Svelte, and web components.
+tabs:
+  [
+    'React',
+    'Vanilla',
+    'Angular',
+    'Vue',
+    'Svelte',
+    'Web Components',
+    'Other frameworks',
+  ]
 ---
 
 <PageDescription>
 
 The Carbon Design System is built React first. We also support core parts of the
-system in vanilla JS, Angular, Vue, and Svelte. If you’re using a different
-framework, you can still build components by following the guidelines below.
+system in vanilla JS, Angular, Vue, Svelte, and web components. If you’re using
+a different framework, you can still build components by following the
+guidelines below.
 
 </PageDescription>
 
@@ -41,7 +51,7 @@ there are no zombie event handlers.
 
 The easiest way to hook on the creation/destruction of DOM elements is by
 defining a "wrapping component", with the JavaScript framework of your choice.
-Here's an example using Web Components'
+Here's an example using web components'
 [Custom Elements v1 spec](https://developer.mozilla.org/en-US/docs/Web/Web_Components/Custom_Elements),
 but the notion of components, along with the lifecycle callbacks, are commonly
 found in many other JavaScript frameworks.
