docs: update releases page
- use Carbon TBD for now
- better describe Carbon 10 and TBD
- put IDL first in table

--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -44,33 +44,36 @@ Carbon’s future.
 
 ## Release schedule
 
-Each Carbon Design System release includes library releases that are
+Each Carbon Design System release includes package releases that are
 independently versioned following the industry-standard
 [semantic versioning](https://semver.org) specification.
 
-The Carbon team also ships minor releases every other week and when necessary,
-patch releases between minor versions to address bugs. Read more in Carbon's
+The Carbon team also ships package minor releases every other week and when
+necessary, patch releases between minor versions to address bugs. Read more in
+Carbon's
 [release radar](https://github.com/carbon-design-system/carbon/wiki/Release-radar).
 
 ### Carbon 10
 
-Carbon 10 was a unique release as it was the first to implement the updated IBM
-Design Language. That required product redesigns to a certain extent due to
-foundational differences between IBM Design Language versions.
+Carbon 10 is the digital expression of the IBM Design Language, v2. The updated
+components required some product redesigns, however they had a clearly
+identifiable IBMness and created a connective tissue between all product
+experiences.
 
-### Carbon 11
+### Carbon TBD
 
-Unlike Carbon 10, the upcoming Carbon 11 release will not require you to
-redesign your product as the IBM Design Language version has not changed since
-Carbon 10. Read more about the upcoming
-[Carbon 11 release](https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a).
+Carbon TBD uses newer browser capabilities and includes quality of life updates
+for improved designer / developer experiences. As v2 of the IBM Design Language
+is still current, Carbon TBD will not require brand-driven product redesigns.
+Read more about the upcoming
+[Carbon TBD release](https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a).
 
 <StructuredListWrapper>
   <StructuredListHead>
     <StructuredListRow head>
+      <StructuredListCell head>IBM Design Language</StructuredListCell>
       <StructuredListCell head>Release</StructuredListCell>
       <StructuredListCell head>GA Date</StructuredListCell>
-      <StructuredListCell head>IBM Design Language</StructuredListCell>
       <StructuredListCell head>Carbon Elements</StructuredListCell>
       <StructuredListCell head>Carbon Components</StructuredListCell>
       <StructuredListCell head>Carbon React</StructuredListCell>
@@ -78,21 +81,21 @@ Carbon 10. Read more about the upcoming
   </StructuredListHead>
   <StructuredListBody>
     <StructuredListRow>
-      <StructuredListCell>✅ Carbon 11</StructuredListCell>
-      <StructuredListCell>2021 Q2</StructuredListCell>
       <StructuredListCell>
         <Link href="https://www.ibm.com/design/language">v2</Link>
       </StructuredListCell>
+      <StructuredListCell>Carbon TBD</StructuredListCell>
+      <StructuredListCell>2021 Q2</StructuredListCell>
       <StructuredListCell>v11.x</StructuredListCell>
       <StructuredListCell>v11.x</StructuredListCell>
       <StructuredListCell>v8.x</StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
-      <StructuredListCell>✅ Carbon 10</StructuredListCell>
-      <StructuredListCell>03/29/19</StructuredListCell>
       <StructuredListCell>
         <Link href="https://www.ibm.com/design/language">v2</Link>
       </StructuredListCell>
+      <StructuredListCell>Carbon 10</StructuredListCell>
+      <StructuredListCell>03/29/19</StructuredListCell>
       <StructuredListCell>
         <Link href="https://www.npmjs.com/package/@carbon/elements/v/latest">
           v10.x
@@ -110,9 +113,9 @@ Carbon 10. Read more about the upcoming
       </StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
-      <StructuredListCell>⚠️ Carbon 9</StructuredListCell>
-      <StructuredListCell>06/04/18</StructuredListCell>
       <StructuredListCell>v1</StructuredListCell>
+      <StructuredListCell>Carbon 9</StructuredListCell>
+      <StructuredListCell>06/04/18</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>
         <Link href="https://www.npmjs.com/package/carbon-components/v/9.x">
@@ -126,9 +129,9 @@ Carbon 10. Read more about the upcoming
       </StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
-      <StructuredListCell>⚠️ Carbon 8</StructuredListCell>
-      <StructuredListCell>10/26/17</StructuredListCell>
       <StructuredListCell>v1</StructuredListCell>
+      <StructuredListCell>Carbon 8</StructuredListCell>
+      <StructuredListCell>10/26/17</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>
         <Link href="https://www.npmjs.com/package/carbon-components/v/8.23.1">
@@ -142,9 +145,9 @@ Carbon 10. Read more about the upcoming
       </StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
-      <StructuredListCell>⚠️ Carbon 7</StructuredListCell>
-      <StructuredListCell>03/30/17</StructuredListCell>
       <StructuredListCell>v1</StructuredListCell>
+      <StructuredListCell>Carbon 7</StructuredListCell>
+      <StructuredListCell>03/30/17</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>
         <Link href="https://www.npmjs.com/package/carbon-components/v/7.26.10">
@@ -158,9 +161,9 @@ Carbon 10. Read more about the upcoming
       </StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
-      <StructuredListCell>⚠️ Carbon 6</StructuredListCell>
-      <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>v1</StructuredListCell>
+      <StructuredListCell>Carbon 6</StructuredListCell>
+      <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>
         <Link href="https://www.npmjs.com/package/carbon-components/v/6.20.1">
