docs: update releases table with more links

--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -53,38 +53,38 @@ necessary, patch releases between minor versions to address bugs. Read more in
 Carbon's
 [release radar](https://github.com/carbon-design-system/carbon/wiki/Release-radar).
 
-### Carbon 10
+### Carbon v10
 
-Carbon 10 is the digital expression of the IBM Design Language, v2. The updated
+Carbon v10 is the digital expression of the IBM Design Language, v2. The updated
 components required some product redesigns, however they had a clearly
 identifiable IBMness and created a connective tissue between all product
 experiences.
 
-### Carbon TBD
+### Carbon v11
 
-Carbon TBD uses newer browser capabilities and includes quality of life updates
+Carbon v11 uses newer browser capabilities and includes quality of life updates
 for improved designer / developer experiences. As v2 of the IBM Design Language
-is still current, Carbon TBD will not require brand-driven product redesigns.
+is still current, Carbon v11 will not require brand-driven product redesigns.
 Read more about the upcoming
-[Carbon TBD release](https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a).
+[Carbon v11 release](https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a).
 
 <StructuredListWrapper>
   <StructuredListHead>
     <StructuredListRow head>
       <StructuredListCell head>IBM Design Language</StructuredListCell>
-      <StructuredListCell head>Release</StructuredListCell>
-      <StructuredListCell head>GA Date</StructuredListCell>
-      <StructuredListCell head>Carbon Elements</StructuredListCell>
-      <StructuredListCell head>Carbon Components</StructuredListCell>
-      <StructuredListCell head>Carbon React</StructuredListCell>
+      <StructuredListCell head>Carbon Design System</StructuredListCell>
+      <StructuredListCell head>General Availability</StructuredListCell>
+      <StructuredListCell head>@carbon/elements</StructuredListCell>
+      <StructuredListCell head>carbon-components</StructuredListCell>
+      <StructuredListCell head>carbon-components-react</StructuredListCell>
     </StructuredListRow>
   </StructuredListHead>
   <StructuredListBody>
     <StructuredListRow>
       <StructuredListCell>
-        <Link href="https://www.ibm.com/design/language">v2</Link>
+        <Link href="https://www.ibm.com/design/language">IDL v2</Link>
       </StructuredListCell>
-      <StructuredListCell>Carbon TBD</StructuredListCell>
+      <StructuredListCell>Carbon v11</StructuredListCell>
       <StructuredListCell>2021 Q2</StructuredListCell>
       <StructuredListCell>v11.x</StructuredListCell>
       <StructuredListCell>v11.x</StructuredListCell>
@@ -92,9 +92,11 @@ Read more about the upcoming
     </StructuredListRow>
     <StructuredListRow>
       <StructuredListCell>
-        <Link href="https://www.ibm.com/design/language">v2</Link>
+        <Link href="https://www.ibm.com/design/language">IDL v2</Link>
       </StructuredListCell>
-      <StructuredListCell>Carbon 10</StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://www.carbondesignsystem.com">Carbon v10</Link>
+      </StructuredListCell>
       <StructuredListCell>03/29/19</StructuredListCell>
       <StructuredListCell>
         <Link href="https://www.npmjs.com/package/@carbon/elements/v/latest">
@@ -113,8 +115,10 @@ Read more about the upcoming
       </StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
-      <StructuredListCell>v1</StructuredListCell>
-      <StructuredListCell>Carbon 9</StructuredListCell>
+      <StructuredListCell>IDL v1</StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://v9.carbondesignsystem.com">Carbon v9</Link>
+      </StructuredListCell>
       <StructuredListCell>06/04/18</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>
@@ -129,8 +133,10 @@ Read more about the upcoming
       </StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
-      <StructuredListCell>v1</StructuredListCell>
-      <StructuredListCell>Carbon 8</StructuredListCell>
+      <StructuredListCell>IDL v1</StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://v8.carbondesignsystem.com">Carbon v8</Link>
+      </StructuredListCell>
       <StructuredListCell>10/26/17</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>
@@ -145,8 +151,10 @@ Read more about the upcoming
       </StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
-      <StructuredListCell>v1</StructuredListCell>
-      <StructuredListCell>Carbon 7</StructuredListCell>
+      <StructuredListCell>IDL v1</StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://v7.carbondesignsystem.com">Carbon v7</Link>
+      </StructuredListCell>
       <StructuredListCell>03/30/17</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>
@@ -161,8 +169,10 @@ Read more about the upcoming
       </StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
-      <StructuredListCell>v1</StructuredListCell>
-      <StructuredListCell>Carbon 6</StructuredListCell>
+      <StructuredListCell>IDL v1</StructuredListCell>
+      <StructuredListCell>
+        <Link href="https://v6.carbondesignsystem.com">Carbon v6</Link>
+      </StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>
