update chart types page links

--- a/src/pages/data-visualization/getting-started/index.mdx
+++ b/src/pages/data-visualization/getting-started/index.mdx
@@ -33,7 +33,7 @@ requests to the
   <ResourceCard
     subTitle="Carbon Charts demo site"
     href="https://carbon-design-system.github.io/carbon-charts/">
-    <MdxIcon name="codesandbox" />
+    <MdxIcon name="storybook" />
   </ResourceCard>
 </Column>
 
