--- a/src/pages/data-visualization/simple-charts/index.mdx
+++ b/src/pages/data-visualization/simple-charts/index.mdx
@@ -31,7 +31,7 @@ import ChartDemoGroup from '../../../components/data-visualization/ChartDemoGrou
     <ResourceCard
       subTitle="Carbon Charts demo site"
       href="https://carbon-design-system.github.io/carbon-charts/">
-      ![Alluvial diagram](images/01_adv_alluvial_928.png)
+      <MdxIcon name="storybook" />
     </ResourceCard>
   </Column>
 </Row>
