--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -17,8 +17,8 @@ appropriate chart type.
 <Row className="overview-card-group">
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Simple bar (vertical)"
-    href="/data-visualization/simple-charts#simple-bar-(discrete)"
+    title="Simple bar"
+    href="/data-visualization/simple-charts#bar-(simple)"
     >
 
 ![GATSBY_EMPTY_ALT](images/bar.svg)
@@ -27,8 +27,8 @@ appropriate chart type.
 </Column>
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Grouped bar (vertical)"
-    href="/data-visualization/simple-charts#grouped-bar-(discrete)"
+    title="Grouped bar"
+    href="/data-visualization/simple-charts#bar-(grouped)"
     >
 
 ![GATSBY_EMPTY_ALT](images/bargrouped.svg)
@@ -52,26 +52,6 @@ appropriate chart type.
     >
 
 ![GATSBY_EMPTY_ALT](images/radar.svg)
-
-</OverviewCard>
-</Column>
-<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
- <OverviewCard
-    title="Simple bar (horizontal)"
-    href="/data-visualization/simple-charts#simple-horizontal-bar-(discrete)"
-    >
-
-![GATSBY_EMPTY_ALT](images/barhoriz.svg)
-
-</OverviewCard>
-</Column>
-<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
- <OverviewCard
-    title="Grouped bar (horizontal)"
-    href="/data-visualization/simple-charts#grouped-horizontal-bar-(discrete)"
-    >
-
-![GATSBY_EMPTY_ALT](images/grouped-bar-horizontal.svg)
 
 </OverviewCard>
 </Column>
@@ -148,21 +128,11 @@ appropriate chart type.
 
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Stacked bar (horizontal)"
-    href="/data-visualization/simple-charts/#stacked-horizontal-bar-(discrete)"
+    title="Stacked bar"
+    href="/data-visualization/simple-charts/#bar-(stacked)"
     >
 
 ![GATSBY_EMPTY_ALT](images/stacked-bar-horizontal.svg)
-
-</OverviewCard>
-</Column>
-<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
- <OverviewCard
-    title="Stacked bar (vertical)"
-    href="/data-visualization/simple-charts/#stacked-bar-(discrete)"
-    >
-
-![GATSBY_EMPTY_ALT](images/barstack.svg)
 
 </OverviewCard>
 </Column>
