docs: add heading to releases page

--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -42,7 +42,7 @@ Carbon’s future.
 </Column>
 </Row>
 
-## Release schedule
+## Releases
 
 Each Carbon Design System release includes package releases that are
 independently versioned following the industry-standard
@@ -67,6 +67,8 @@ for improved designer / developer experiences. As v2 of the IBM Design Language
 is still current, Carbon v11 will not require brand-driven product redesigns.
 Read more about the upcoming
 [Carbon v11 release](https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a).
+
+## Release history
 
 <StructuredListWrapper>
   <StructuredListHead>
