--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -73,7 +73,7 @@ appropriate chart type.
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Area"
-    href="/data-visualization/simple-charts#area"
+    href="/data-visualization/simple-charts#area-(simple)"
     >
 
 ![GATSBY_EMPTY_ALT](images/area.svg)
@@ -139,7 +139,7 @@ appropriate chart type.
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Stacked area"
-    href="/data-visualization/simple-charts/#stacked-area-chart"
+    href="/data-visualization/simple-charts/#area-(stacked)"
     >
 
 ![GATSBY_EMPTY_ALT](images/areastack.svg)
