--- a/src/pages/community/patterns/edit-pattern/index.mdx
+++ b/src/pages/community/patterns/edit-pattern/index.mdx
@@ -4,226 +4,152 @@ title: Edit
 
 #### Maintainers:
 
-[Vikki Paterson](https://github.com/vikkipaterson),
-[Chloe Poulter](https://github.com/chloepoulterdesign)
+Carbon for Cloud & Cognitive Design system adoption guild
 
 <PageDescription>
 
 Editing is making changes to a resource that already exists in the system.
-Updating and editing should use the same behavior as when the resource is
-created. This should only vary in situations where the number of editable fields
-is significantly smaller or larger than during creation, or the context of
-current settings is required.
 
 </PageDescription>
 
 <AnchorLinks>
-  <AnchorLink>Low-impact edit</AnchorLink>
-  <AnchorLink>High-impact edit</AnchorLink>
+  <AnchorLink>Overview</AnchorLink>
+  <AnchorLink>Inline edit</AnchorLink>
+  <AnchorLink>Modal edit</AnchorLink>
+  <AnchorLink>Side panel edit</AnchorLink>
+  <AnchorLink>Tearsheet edit</AnchorLink>
+  <AnchorLink>Full page edit</AnchorLink>
+  <AnchorLink>Other edit behaviors</AnchorLink>
   <AnchorLink>Optional extras</AnchorLink>
+  <AnchorLink>Designing with edit flows</AnchorLink>
+  <AnchorLink>Related use cases</AnchorLink>
+  <AnchorLink>Terminology</AnchorLink>
+  <AnchorLink>Accessibility</AnchorLink>
+  <AnchorLink>Related</AnchorLink>
 </AnchorLinks>
 
-![Contextual image of an edit modal](images/Contextual.png)
+## Overview
 
-<Caption>Example of an edit modal in context</Caption>
+Users often need to edit different types of assets, and they can have simple or
+complex requirements.
 
-## Low-impact edit
+To edit is to change values or data. This pattern focuses on how to place the
+user in a flow when there's a need for editing an existing asset. Choose the
+flow depending on the number, impact and intent of edits made.
 
-For low-impact edits, allow editing with no warning. This approach is typically
-used when editing doesn’t have a wider impact.
+| Type                        | Usage                                                                                                                             | Context                                          |
+| --------------------------- | --------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------ |
+| Inline edit                 | Use with quick, simple edits of disparate fields.                                                                                 | On-page content can be seen and interacted with. |
+| Modal edit                  | Use with simple or transitional edits of no more than a couple of form fields.                                                    | On-page content is obscured.                     |
+| Edit in side panel          | Use with medium complexity edits if the user needs page context.                                                                  |                                                  |
+| Edit in tearsheets          | Use with medium to complex edits.                                                                                                 | On-page content is obscured.                     |
+| Full-page or takeover edits | Use with edits to a usable service.                                                                                               | N/A                                              |
+| Other edit behaviours       | UI components with their own edit interaction patterns such as cards, dashboards, data tables, text editors and property editors. | N/A                                              |
 
-<Row>
-<Column colLg={8}>
+## Inline edit
 
-![Example of an edit button in a table](images/02.png)
+### When to use
 
-<Caption>Example of an edit button in a table</Caption>
+### When not to use
 
-</Column>
-</Row>
+## Modal edit
 
-### Modal
+### When to use
 
-If an object was created in a modal, its editable fields can be made available
-in a modal. A modal can also be used where a small subset of fields are
-editable. If enough fields are editable to require scrolling, use a side-panel
-or full-page edit dialog instead.
+### When not to use
 
-<Row>
-<Column colLg={8}>
+## Side panel edit
 
-![Example of a low consequence edit action in a modal](images/03.png)
+### When to use
 
-<Caption>Example of a low consequence edit action in a modal</Caption>
+### When not to use
 
-</Column>
-</Row>
+## Tearsheet edit
 
-### Side-panel
+### When to use
 
-If an object was created in a side panel, its editable fields can be made
-available in a side panel. A side panel can also be used where context in the
-main view of the screen is useful in the editing flow.
+### When not to use
 
-<Row>
-<Column colLg={8}>
+## Full page edit
 
-![Example of a low-impact edit action in a side panel](images/LowSidepanel.png)
+### When to use
 
-<Caption>Example of a low impact edit action in a side panel</Caption>
+### When not to use
 
-</Column>
-</Row>
+## Other edit behaviors
 
-### Full page
+### Dashboards
 
-When an object is created in a full-page flow and the majority of fields become
-editable, a full-page edit flow should be used. This is made possible by
-including a configuration/properties view.
+### Cards
 
-<Row>
-<Column colLg={8}>
+### Data tables
 
-![Example of a properties view in reading (top) and editing (bottom) views](images/05.png)
+### Text editors
 
-<Caption>
-  Example of a properties view in reading (top) and editing (bottom) views
-</Caption>
-
-</Column>
-</Row>
-
-## High-impact edit
-
-Warn the user of the consequences of editing. This pattern is typically used
-when editing has a wider impact. Inform users of the likely consequences of the
-edit to their system, and inform them that editing cannot be undone. Include a
-warning stage.
-
-### Modal
-
-A high-impact edit action of only a few fields can use a danger modal. A second
-confirm edit modal should also be inserted before the changes are saved. If
-desired, the confirmation modal can include a
-[summary of changes](#summary-of-changes).
-
-<Row>
-<Column colLg={8}>
-
-![Example of a high-impact editing modal and consequent warning modal](images/HighModal.png)
-
-<Caption>
-  Example of a high-impact editing modal and consequent warning modal
-</Caption>
-
-</Column>
-</Row>
-
-### Side-panel
-
-If an object was created in a side panel, or there are too many editable fields
-for a modal, a slide-over panel can be used.
-
-<Row>
-<Column colLg={8}>
-
-![Example of a high-impact edit action in a side panel](images/HighSidepanel.png)
-
-<Caption>Example of a high-impact edit action in a side panel</Caption>
-
-</Column>
-</Row>
-
-High-impact side panel edits should also warn the user of destructive edits with
-a warning before changes are saved.
-
-<Row>
-<Column colLg={8}>
-
-![Example of a warning screen in a side panel before a user saves changes](images/08.png)
-
-<Caption>
-  Example of a warning screen in a side panel before a user saves changes
-</Caption>
-
-</Column>
-</Row>
-
-### Full page
-
-When an object was created in a full-page flow, or the volume of editable fields
-is high, use a full-page edit dialog.
-
-<Row>
-<Column colLg={8}>
-
-![Example of a full-page edit view](images/09.png)
-
-<Caption>Example of a full-page edit view</Caption>
-
-</Column>
-</Row>
-
-<Row>
-<Column colLg={8}>
-
-![Example of a modal warning users of the consequences of saving after a full-page edit](images/10.png)
-
-<Caption>
-  Example of a modal warning users of the consequences of saving after a
-  full-page edit
-</Caption>
-
-</Column>
-</Row>
+### Property editors
 
 ## Optional extras
 
 ### Summary of changes
 
-Adding a summary of changes to the warning stage of a high-impact flow can help
-the user manage and understand all of the changes they have made.
+### Preview of changes
 
-<Row>
-<Column colLg={8}>
+### Warnings
 
-![Example of a summary of changes in a modal](images/12.png)
+#### Low severity edits
 
-<Caption>Example of a summary of changes in a modal</Caption>
+#### High severity edits
 
+### Undo
+
+### Success messages
+
+### Errors
+
+## Designing with edit flows
+
+### Behaviors generic to all variants of edit
+
+#### Edit mode
+
+If the user intent includes viewing without editing, provide a read-only state
+and reveal editable fields when users click an "edit" button.
+
+| Type               | Interaction                                                                 | When to use                                                                                                                    |
+| ------------------ | --------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------ |
+| Active "edit mode" | Editable fields become available only after a user clicks an "edit" button. | Use when users' intent may be to review rather than change data or values. Use when editing will disrupt user or system tasks. |
+| Always editale     | Fields that can be changed always appear editable.                          | Use when users main goal is to change data rather than review data.                                                            |
+
+<DoDontRow>
+  <DoDont captionTitle="Edit mode" caption="Caption" colLg="4">
+    <Video src="/images/EditMode.mp4" autoPlay="true" />
+  </DoDont>
+  <DoDont captionTitle="Always editable" caption="Caption" colLg="4">
+    <Video src="/images/AlwaysEditable.mp4" autoPlay="true" />
+  </DoDont>
+</DoDontRow>
+
+<Column colLg='6'>
+<GifPlayer>
+
+![Always editable](/images/AlwaysEditable.gif) // must be gif
+
+![IBM Cloud Pictograms](/images/IBM_Cloud_Pictograms.jpg) // must be static
+image
+
+</GifPlayer>
 </Column>
-</Row>
 
-### Non-editable fields
+#### Save mode
 
-When a small number of fields are not editable, display their set value in a
-disabled field.
+#### Severity
 
-<Row>
-<Column colLg={8}>
+### Best practices
 
-![Example of a single non-editable field](images/11.png)
+## Related use cases
 
-<Caption>Example of a single non-editable field</Caption>
+## Terminology
 
-</Column>
-</Row>
+## Accessibility
 
-Where a majority of variables are not editable, consider using an option that
-will display only editable fields. In a small number of cases, make individual
-variables editable in modals.
-
-### Success notifications
-
-An optional success notification can be used to confirm that the user's changes
-have been saved.
-
-<Row>
-<Column colLg={8}>
-
-![Example of a successful editing toast notification](images/13.png)
-
-<Caption>Example of a successful editing toast notification</Caption>
-
-</Column>
-</Row>
+## Related
