add boxplot & wordcloud images

--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -80,6 +80,18 @@ appropriate chart type.
 
 </OverviewCard>
 </Column>
+
+<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
+ <OverviewCard
+    title="Boxplot"
+    href="/data-visualization/simple-charts#boxplot"
+    >
+
+![GATSBY_EMPTY_ALT](images/boxplot.svg)
+
+</OverviewCard>
+</Column>
+
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Histogram"
@@ -178,6 +190,18 @@ appropriate chart type.
 
 </OverviewCard>
 </Column>
+
+<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
+ <OverviewCard
+    title="Wordcloud"
+    href="/data-visualization/simple-charts#wordcloud"
+    >
+
+![GATSBY_EMPTY_ALT](images/wordcloud.svg)
+
+</OverviewCard>
+</Column>
+
 </Row>
 
 ## Correlations
