docs: go back to carbon tbd for now

--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -60,13 +60,13 @@ components required some product redesigns, however they had a clearly
 identifiable IBMness and created a connective tissue between all product
 experiences.
 
-### Carbon v11
+### Carbon TBD
 
-Carbon v11 uses newer browser capabilities and includes quality of life updates
+Carbon TBD uses newer browser capabilities and includes quality of life updates
 for improved designer / developer experiences. As v2 of the IBM Design Language
-is still current, Carbon v11 will not require brand-driven product redesigns.
+is still current, Carbon TBD will not require brand-driven product redesigns.
 Read more about the upcoming
-[Carbon v11 release](https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a).
+[Carbon TBD release](https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a).
 
 ## Release history
 
@@ -86,7 +86,7 @@ Read more about the upcoming
       <StructuredListCell>
         <Link href="https://www.ibm.com/design/language">IDL v2</Link>
       </StructuredListCell>
-      <StructuredListCell>Carbon v11</StructuredListCell>
+      <StructuredListCell>Carbon TBD</StructuredListCell>
       <StructuredListCell>2021 Q2</StructuredListCell>
       <StructuredListCell>v11.x</StructuredListCell>
       <StructuredListCell>v11.x</StructuredListCell>
