add lollipop to demos and move wordcloud into comparisons

--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -35,6 +35,18 @@ appropriate chart type.
 
 </OverviewCard>
 </Column>
+
+<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
+ <OverviewCard
+    title="Lollipop"
+    href="/data-visualization/simple-charts#lollipop"
+    >
+
+![GATSBY_EMPTY_ALT](images/lollipop.svg)
+
+</OverviewCard>
+</Column>
+
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Bubble"
@@ -55,6 +67,18 @@ appropriate chart type.
 
 </OverviewCard>
 </Column>
+
+<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
+ <OverviewCard
+    title="Wordcloud"
+    href="/data-visualization/simple-charts#word-cloud"
+    >
+
+![GATSBY_EMPTY_ALT](images/wordcloud.svg)
+
+</OverviewCard>
+</Column>
+
 </Row>
 
 ## Trends
@@ -187,17 +211,6 @@ appropriate chart type.
     >
 
 ![GATSBY_EMPTY_ALT](images/treemap.svg)
-
-</OverviewCard>
-</Column>
-
-<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
- <OverviewCard
-    title="Wordcloud"
-    href="/data-visualization/simple-charts#wordcloud"
-    >
-
-![GATSBY_EMPTY_ALT](images/wordcloud.svg)
 
 </OverviewCard>
 </Column>
