docs: add details to release table

--- a/src/pages/whats-happening/releases/index.mdx
+++ b/src/pages/whats-happening/releases/index.mdx
@@ -12,6 +12,7 @@ import {
   StructuredListCell,
   StructuredListBody,
   Link,
+  UnorderedList,
 } from 'carbon-components-react';
 
 <PageDescription>
@@ -53,6 +54,14 @@ necessary, patch releases between minor versions to address bugs. Read more in
 Carbon's
 [release radar](https://github.com/carbon-design-system/carbon/wiki/Release-radar).
 
+### Carbon TBD
+
+Carbon TBD uses newer browser capabilities and includes quality of life updates
+for improved designer and developer experiences. As v2 of the IBM Design
+Language is still current, Carbon TBD will not require brand-driven product
+redesigns. Read more about the upcoming
+[Carbon TBD release](https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a).
+
 ### Carbon v10
 
 Carbon v10 is the digital expression of the IBM Design Language, v2. The updated
@@ -60,22 +69,13 @@ components required some product redesigns, however they had a clearly
 identifiable IBMness and created a connective tissue between all product
 experiences.
 
-### Carbon TBD
-
-Carbon TBD uses newer browser capabilities and includes quality of life updates
-for improved designer / developer experiences. As v2 of the IBM Design Language
-is still current, Carbon TBD will not require brand-driven product redesigns.
-Read more about the upcoming
-[Carbon TBD release](https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a).
-
 ## Release history
 
 <StructuredListWrapper>
   <StructuredListHead>
     <StructuredListRow head>
-      <StructuredListCell head>IBM Design Language</StructuredListCell>
       <StructuredListCell head>Carbon Design System</StructuredListCell>
-      <StructuredListCell head>General Availability</StructuredListCell>
+      <StructuredListCell head>IBM Design Language</StructuredListCell>
       <StructuredListCell head>@carbon/elements</StructuredListCell>
       <StructuredListCell head>carbon-components</StructuredListCell>
       <StructuredListCell head>carbon-components-react</StructuredListCell>
@@ -84,22 +84,40 @@ Read more about the upcoming
   <StructuredListBody>
     <StructuredListRow>
       <StructuredListCell>
+        <strong>Carbon TBD</strong>
+        <UnorderedList>
+          — GA: 2021 Q2
+          <br />
+          — Improves token and prop naming
+          <br />
+          — Adds inline color theming
+          <br />— Drops IE11 support
+        </UnorderedList>
+      </StructuredListCell>
+      <StructuredListCell>
         <Link href="https://www.ibm.com/design/language">IDL v2</Link>
       </StructuredListCell>
-      <StructuredListCell>Carbon TBD</StructuredListCell>
-      <StructuredListCell>2021 Q2</StructuredListCell>
       <StructuredListCell>v11.x</StructuredListCell>
       <StructuredListCell>v11.x</StructuredListCell>
       <StructuredListCell>v8.x</StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
       <StructuredListCell>
-        <Link href="https://www.ibm.com/design/language">IDL v2</Link>
+        <Link href="https://www.carbondesignsystem.com">
+          <strong>Carbon v10</strong>
+        </Link>
+        <UnorderedList>
+          — GA: 03/29/19
+          <br />
+          — Updates visuals to new design language
+          <br />
+          — Adds Carbon Elements package
+          <br />— Updates grid to 16 columns
+        </UnorderedList>
       </StructuredListCell>
       <StructuredListCell>
-        <Link href="https://www.carbondesignsystem.com">Carbon v10</Link>
+        <Link href="https://www.ibm.com/design/language">IDL v2</Link>
       </StructuredListCell>
-      <StructuredListCell>03/29/19</StructuredListCell>
       <StructuredListCell>
         <Link href="https://www.npmjs.com/package/@carbon/elements/v/latest">
           v10.x
@@ -117,11 +135,13 @@ Read more about the upcoming
       </StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
-      <StructuredListCell>IDL v1</StructuredListCell>
       <StructuredListCell>
-        <Link href="https://v9.carbondesignsystem.com">Carbon v9</Link>
+        <Link href="https://v9.carbondesignsystem.com">
+          <strong>Carbon v9</strong>
+        </Link>
+        <UnorderedList>— GA: 06/04/18</UnorderedList>
       </StructuredListCell>
-      <StructuredListCell>06/04/18</StructuredListCell>
+      <StructuredListCell>IDL v1</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>
         <Link href="https://www.npmjs.com/package/carbon-components/v/9.x">
@@ -135,11 +155,13 @@ Read more about the upcoming
       </StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
-      <StructuredListCell>IDL v1</StructuredListCell>
       <StructuredListCell>
-        <Link href="https://v8.carbondesignsystem.com">Carbon v8</Link>
+        <Link href="https://v8.carbondesignsystem.com">
+          <strong>Carbon v8</strong>
+        </Link>
+        <UnorderedList>— GA: 10/26/17</UnorderedList>
       </StructuredListCell>
-      <StructuredListCell>10/26/17</StructuredListCell>
+      <StructuredListCell>IDL v1</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>
         <Link href="https://www.npmjs.com/package/carbon-components/v/8.23.1">
@@ -153,11 +175,13 @@ Read more about the upcoming
       </StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
-      <StructuredListCell>IDL v1</StructuredListCell>
       <StructuredListCell>
-        <Link href="https://v7.carbondesignsystem.com">Carbon v7</Link>
+        <Link href="https://v7.carbondesignsystem.com">
+          <strong>Carbon v7</strong>
+        </Link>
+        <UnorderedList>— GA: 03/30/17</UnorderedList>
       </StructuredListCell>
-      <StructuredListCell>03/30/17</StructuredListCell>
+      <StructuredListCell>IDL v1</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>
         <Link href="https://www.npmjs.com/package/carbon-components/v/7.26.10">
@@ -171,11 +195,12 @@ Read more about the upcoming
       </StructuredListCell>
     </StructuredListRow>
     <StructuredListRow>
-      <StructuredListCell>IDL v1</StructuredListCell>
       <StructuredListCell>
-        <Link href="https://v6.carbondesignsystem.com">Carbon v6</Link>
+        <Link href="https://v6.carbondesignsystem.com">
+          <strong>Carbon v6</strong>
+        </Link>
       </StructuredListCell>
-      <StructuredListCell>—</StructuredListCell>
+      <StructuredListCell>IDL v1</StructuredListCell>
       <StructuredListCell>—</StructuredListCell>
       <StructuredListCell>
         <Link href="https://www.npmjs.com/package/carbon-components/v/6.20.1">
